fix image transition on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -379,3 +379,10 @@ a:hover {
         cursor: alias;
     }
 }
+
+.js-notransition {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    -o-transition: none !important;
+    transition: none !important;
+}
